configured liquibase + initial migration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
+# General env properties
+SERVER_PORT=8081
+SERVER_ADDRESS=127.0.0.1
+
+# Env variables for db connection
 DB_USER=postgres
-DB_PASSWORD=postgres
-DB_ADDRESS=addr
-DB_SCHEMA=public
+DB_PASSWORD=admin
+DB_ADDRESS=localhost
+DB_PORT=5008
+DB_DATABASE=db
