configured jwt filter, jwt service

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DB_PASSWORD=admin
 DB_ADDRESS=localhost
 DB_PORT=5008
 DB_DATABASE=db
+
+# JWT env properties
+JWT_SECRET_TOKEN=secrettoken1secrettoken1secrettoken1secrettoken1
