--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ server:
     threads:
       min-spare: 0
 
+
 spring:
   config:
     import: optional:file:.env[.properties]
@@ -40,3 +41,4 @@ spring:
     schema:
       locations: ""
 
+debug: true
