Installed base graphql infrastructure. Schema first implementation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,4 +41,18 @@ spring:
     schema:
       locations: ""
 
+
+graphql:
+  playground:
+    cdn:
+      enabled: true
+    enabled: true
+  servlet:
+    maxQueryDepth: 15
+    maxQueryComplexity: 1000
+    enabled: true
+    exception-handlers-enabled: true
+    actuator-metrics: true
+
+
 debug: true
